--- a/front/src/views/Authentication/SignUp/style.css
+++ b/front/src/views/Authentication/SignUp/style.css
@@ -11,7 +11,7 @@
     width: 830px;
     background-position: 50% 50%;
     background-size: 100% 100%;
-    background-image: url(assets/images/decode.png);
+    background-image: url(assets/images/decode2.png);
 }
 
 .sign-up-container {
